force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>Camp Apex Advent of Salesforce Development. This object is used to represent vendors who would like a booth at the festival.</description>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>