force-app/main/default/objects/Vendor__c/fields/Review_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_By_Date__c</fullName>
    <label>Review By Date</label>
    <type>Date</type>
</CustomField>