force-app/main/default/objects/Vendor__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Candy Maker</fullName>
            </value>
            <value>
                <fullName>Performer</fullName>
            </value>
            <value>
                <fullName>Game Master</fullName>
            </value>
            <value>
                <fullName>Fisherelf</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>